<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="DuplicateStrings">
    <string name="app_name">QRitical Info</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log in…</string>
    <string name="logged_in">Log into Google Drive</string>
    <string name="edit_file">Select file</string>
    <string name="change_account">Change account…</string>
    <string name="wallpaper_name">QRitical Info Wallpaper</string>
    <string name="wallpaper_description">Shows a QR code linking to essential info.</string>
    <string name="logTag">QRiticalInfo</string>
    <string name="checklist_item_placeholder">TODO: Name this checklist item</string>
    <string name="main_activity_title">Set Up QRitical Info</string>
    <string name="loading">Loading…</string>
    <string name="log_in_first">Log into Google Drive first.</string>
    <string name="todo">Not done yet</string>
    <string name="done">Done</string>
    <string name="set_wallpaper">QRitical Info is lock-screen wallpaper</string>
    <string name="set_wallpaper_button">Set wallpaper…</string>
    <string name="chosen_file_key">com.example.qriticalinfo.CHOSEN_FILES</string>
    <string name="choose">Browse existing</string>
    <string name="newfile">New…</string>
    <string name="editfile">Edit…</string>
    <string name="choose_file_first">Choose or create a file first!</string>
    <string name="not_configured">Open the QRitical Info app to<br />finish setting up this wallpaper.</string>
    <string name="no_app_can_edit">No installed app can open this file!</string>
    <string name="not_on_drive">The file you\'re sharing must be in your Google Drive.</string>
    <string name="no_app_can_edit_text">No app on this device can edit plain text files!</string>
    <string name="permission_explanation">This app needs access to your accounts and Drive so that it can obtain the sharing link for the file you\'re sharing. Limitations of the Google Drive API mean QRitical Info needs broader permissions in practice than in theory.</string>
    <string name="filename_must_be_unique">This file has the same name as a file in another folder of your Google Drive. Due to a limitation of the Google Drive API, you must use a file with a unique name.</string>
    <string name="intro_text">QRitical Info lets you choose a file from your Google Drive and share it through a QR code on your lock screen. Use this for emergency contacts, but not for anything that would need to stay private if your device was stolen.</string>
</resources>
